--- a/AudioTec/Resources/PlantillaAudioTec.html
+++ b/AudioTec/Resources/PlantillaAudioTec.html
@@ -85,13 +85,13 @@
                         <th style="width:50%; background-color:#D8D8D8">Repuestos</th>
                     </tr>
                     <tr>
-                        <td>@DIAGNOSTICO </td>
-                        <td>@REPUESTOS </td>
+                        <td style="vertical-align: top;">@DIAGNOSTICO </td>
+                        <td style="vertical-align: top;">@REPUESTOS </td>
                     </tr>
                 </table>
                 <table align="right" class="border" style="width:20%">
                     <tr>
-                        <td align="right" style="width:5px">Total:</td>
+                        <td align="left" style="width:5px">Total:</td>
                         <td>@TOTAL</td>
                     </tr>
                 </table>
@@ -103,8 +103,9 @@
         <tr colspan="3" style="width:100%">
             <td>
                 <table style="width:100%">
+                    <tr><td style="width:200px">@GARANTIA</td></tr>
                     <tr><td style="width:200px">Direccion: Lisandro de la torre 2674 </td></tr>
-                    <tr><td>Telefono: 3624-458214</td></tr>
+                    <tr><td>Telefono: 3624-615144</td></tr>
                 </table>
             </td>
         </tr>
