Datos del usuario agregado

--- a/AudioTec/Resources/PlantillaAudioTec.html
+++ b/AudioTec/Resources/PlantillaAudioTec.html
@@ -104,8 +104,9 @@
             <td>
                 <table style="width:100%">
                     <tr><td style="width:200px">@GARANTIA</td></tr>
-                    <tr><td style="width:200px">Direccion: Lisandro de la torre 2674 </td></tr>
-                    <tr><td>Telefono: 3624-615144</td></tr>
+                    <tr><td style="width:200px">Direccion: @EMPRESADIRE</td></tr>
+                    <tr><td>Telefono: @EMPRESATELEFONO</td></tr>
+                    <tr><td style="width:200px">Email: @EMPRESAEMAIL</td></tr>
                 </table>
             </td>
         </tr>
